# ParlaySemisort

./: CMakeLists.txt  README.md
include/: semisort.h
src/: backup.cpp  semisort.cpp  test.cpp
test/: semisort_tests.cpp  test_runner.cpp
